test(auth): discover JWT alg dynamically + minor scaffold polish
- JWT verification now reads the alg from the JWT header rather than
  pinning RS256, so the test survives realm signing-alg changes.
- internalTokenEndpoint() helper dedupes the localhost:8080 URL build.
- exp claim assertion now requires at least 10s of life, catching
  any accidental lifespan misconfiguration.
- Switches new URL(...) (deprecated since JDK 20) to URI.create(...).toURL().
- Renames SA_CLIENT_SECRET value to test-fixture-secret so a secret
  scanner won't squint at it.